--- a/index.html
+++ b/index.html
@@ -45,86 +45,57 @@
 <body class="font-lato">
     <header>
         <!-- navbar section -->
-        <section class="container mx-auto">
-            <div class="navbar bg-base-100">
-                <div class="navbar-start">
-                    <div class="dropdown">
-                        <label tabindex="0" class="btn btn-ghost btn-circle">
-                            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
-                                stroke="currentColor">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                    d="M4 6h16M4 12h16M4 18h7" />
-                            </svg>
-                        </label>
-                        <ul tabindex="0"
-                            class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
-                            <li><a>Homepage</a></li>
-                            <li><a>Portfolio</a></li>
-                            <li><a>About</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="navbar-center">
-                    <a class="btn btn-ghost normal-case text-xl">daisyUI</a>
-                </div>
-                <div class="navbar-end">
-                    <button class="btn btn-ghost btn-circle">
+        <nav class="container mx-auto bg-transparent md:bg-rose-500 lg:bg-rose-500 flex items-center justify-between px-4 py-2 sm:px-6 md:px-8 lg:px-12 rounded-full mt-4 md:mt-8 lg:mt-8">
+        <!-- menu -->
+            <div class="hidden md:flex items-center space-x-4">
+                <ul class="flex items-center space-x-4">
+                    <li><a href="#" class="text-white">Home</a></li>
+                    <li><a href="#" class="text-white">About Us</a></li>
+                    <li><a href="#" class="text-white">Shop</a></li>
+                    <li><a href="#" class="text-white">All Files</a></li>
+                </ul>
+            </div>
 
-                        <div class="relative">
-                            <input type="text"
-                                class="border rounded-full py-2 px-4 pr-10 focus:outline-none focus:ring focus:border-blue-300"
-                                placeholder="Search...">
-                            <div class="absolute inset-y-0 left-48 pr-3 flex items-center pointer-events-none">
-                                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
-                                    stroke="currentColor">
-                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                        d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path>
-                                </svg>
-                            </div>
-                        </div>
-                    </button>
-                    <!-- <button class="btn btn-ghost btn-circle">
-                        <div class="indicator">
-                            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
-                                stroke="currentColor">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                    d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6.002 6.002 0 00-4-5.659V5a2 2 0 10-4 0v.341C7.67 6.165 6 8.388 6 11v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9" />
-                            </svg>
-                            <span class="badge badge-xs badge-primary indicator-item"></span>
-                        </div>
-                    </button> -->
+            <!-- logo -->
+            <div>
+                <div class="md:text-white font-bold text-2xl flex justify-center">
+                    <img class="w-9 md:w-10 pr-1 md:pr-2 lg:pr-2" src="./images/logo.png" alt=".">
+                    <p>Fruit-Burst</p>
                 </div>
             </div>
 
-
-
+            <!-- search bar & search icon -->
+        <div class="hidden sm:flex items-center space-x-4">
             <div class="relative">
-                <input type="text"
-                    class="border rounded-l-lg py-2 px-4 pr-10 focus:outline-none focus:ring focus:border-blue-300"
-                    placeholder="Search...">
-                <div class="absolute inset-y-0 right-0 pr-3 flex items-center pointer-events-none">
-                    <svg class="w-5 h-5 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24"
-                        xmlns="http://www.w3.org/2000/svg">
-                        <path strokeLinecap="round" strokeLinejoin="round" strokeWidth="2" d="M9 19l-7-7 7-7"></path>
-                    </svg>
-                </div>
-            </div>
-
-
-
-            <div class="relative">
-                <input type="text"
-                    class="border rounded-full py-2 px-4 pr-10 focus:outline-none focus:ring focus:border-blue-300"
-                    placeholder="Search...">
-                <div class="absolute inset-y-0 left-48 pr-3 flex items-center pointer-events-none">
+                <input type="text" placeholder="Search"
+                    class="px-4 py-2 rounded-full bg-white text-gray-800 focus:outline-none">
+                <span class="absolute inset-y-0 right-0 flex items-center pr-3">
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
                         stroke="currentColor">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                             d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path>
                     </svg>
-                </div>
+                </span>
             </div>
-        </section>
+        </div>
+
+        <!-- Dropdown menu content -->
+        <div class="sm:hidden relative">
+            <button type="button" class="text-base focus:outline-none" aria-level="menu" >
+                <svg class="h-6 w-6" aria-hidden="true" fill="none" stroke="currentColor" viewBox="0 0 17 14" xmlns="http://www.w3.org/2000/svg">
+                    <path strokeLinecap="round" strokeLinejoin="round" strokeWidth="2" d="M1 1h15M1 7h15M1 13h15">   
+                    </path>
+                </svg>
+            </button>
+            <ul class="origin-top-right absolute right-0 mt-2 w-40 rounded-md shadow-lg bg-white ring-1 ring-black ring-opacity-5 hidden">
+                <li><a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">Home</a></li>
+                <li><a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">About Us</a></li>
+                <li><a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">Shop</a></li>
+                <li><a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">All Files</a></li>
+            </ul>
+        </div>
+
+        </nav>
     </header>
 
     <main>
