--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
 <body class="font-lato">
     <header>
         <!-- navbar section -->
-        <nav class="container mx-auto bg-transparent md:bg-rose-500 lg:bg-rose-500 flex items-center justify-between px-4 py-2 sm:px-6 md:px-8 lg:px-12 rounded-full mt-4 md:mt-8 lg:mt-8">
-        <!-- menu -->
+        <nav class="container mx-auto sm:bg-transparent md:bg-rose-500 lg:bg-rose-500 flex items-center justify-between px-4 py-2 sm:px-6 md:px-8 lg:px-12 rounded-full mt-4 md:mt-8 md:mb-8 lg:mt-8 lg:mb-8">
+        <!-- menu --> 
             <div class="hidden md:flex items-center space-x-4">
                 <ul class="flex items-center space-x-4">
                     <li><a href="#" class="text-white">Home</a></li>
@@ -96,6 +96,45 @@
         </div>
 
         </nav>
+        <!-- banner section -->
+        <div class="carousel-container container mx-auto relative min-h-[Calc(100vh - 120px)]">
+            <div class="absolute z-10 inset-y-5 lg:inset-y-16 md:inset-y-24 inset-x-16 lg:inset-x-52 md:inset-x-32 text-center w-2/3 lg:w-2/3 space-y-2 lg:space-y-4 items-center">
+                <h1 class="text-2xl md:text-5xl lg:text-7xl text-white">Exotic tastes at your doorstep</h1>
+                <p class="text-sm lg:text-lg text-white">We supply highly quality organic products</p>
+                <button class="bg-rose-500 md:btn-error px-4 rounded-lg py-2 text-sm md:btn btn-error text-white">Shop Now</button>
+            </div>
+    
+            <div class="carousel w-full">
+                <div id="slide1" class="carousel-item relative w-full">
+                    <img src="./images/banner1.png" class="w-full" />
+                    <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                        <a href="#slide4" class="btn btn-circle">❮</a>
+                        <a href="#slide2" class="btn btn-circle">❯</a>
+                    </div>
+                </div>
+                <div id="slide2" class="carousel-item relative w-full">
+                    <img src="./images/banner2.png" class="w-full" />
+                    <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                        <a href="#slide1" class="btn btn-circle">❮</a>
+                        <a href="#slide3" class="btn btn-circle">❯</a>
+                    </div>
+                </div>
+                <div id="slide3" class="carousel-item relative w-full">
+                    <img src="./images/banner3.png" class="w-full" />
+                    <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                        <a href="#slide2" class="btn btn-circle">❮</a>
+                        <a href="#slide4" class="btn btn-circle">❯</a>
+                    </div>
+                </div>
+                <div id="slide4" class="carousel-item relative w-full">
+                    <img src="./images/banner4.png" class="w-full" />
+                    <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                        <a href="#slide3" class="btn btn-circle">❮</a>
+                        <a href="#slide1" class="btn btn-circle">❯</a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </header>
 
     <main>
