--- a/test4.html
+++ b/test4.html
@@ -10,62 +10,76 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
-<body class="bg-rose-500">
-    <nav class="flex items-center justify-between px-4 py-2 sm:px-6 md:px-8 lg:px-12 rounded-full">
-        <!-- Left Side: Logo and Menu (Visible on Medium and Large Screens) -->
-        <div class="hidden sm:flex items-center space-x-4">
-            <!-- Logo -->
-            <div class="text-white font-bold text-lg">Fruit-Burst</div>
-
-            <!-- Menu -->
-            <ul class="flex items-center space-x-4">
-                <li><a href="#" class="text-white">Home</a></li>
-                <li><a href="#" class="text-white">About Us</a></li>
-                <li><a href="#" class="text-white">Shop</a></li>
-                <li><a href="#" class="text-white">All Files</a></li>
-            </ul>
-        </div>
-
-        <!-- Center: Logo (Visible on Small Screens) -->
-        <div
-            class="hidden sm:flex items-center justify-center bg-transparent sm:justify-center md:justify-center lg:justify-center">
-            <div class="text-white font-bold text-lg">Fruit-Burst</div>
-        </div>
-
-        <!-- Right Side: Search Bar (Visible on Medium and Large Screens) -->
-        <div class="hidden sm:flex items-center space-x-4">
-            <div class="relative">
-                <input type="text" placeholder="Search"
-                    class="px-4 py-2 rounded-full bg-white text-gray-800 focus:outline-none">
-                <span class="absolute inset-y-0 right-0 flex items-center pr-3">
-                    <svg class="h-5 w-5 text-gray-500" fill="none" stroke="currentColor" viewBox="0 0 24 24"
-                        xmlns="http://www.w3.org/2000/svg">
-                        <path strokeLinecap="round" strokeLinejoin="round" strokeWidth="2"
-                            d="M11 17l4 4m0 0l4-4m-4 4V3"></path>
-                    </svg>
-                </span>
+<body class="">
+    <div class="carousel w-full relative">
+        <!-- Slide 1 -->
+        <div id="slide1" class="carousel-item relative w-full">
+            <img src="./images/banner1.png" class="w-full" />
+            <!-- Sticky content for Slide 1 -->
+            <div class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 text-center">
+                <h2 class="text-3xl font-bold">Exotic tastes at your doorstep</h2>
+                <p>We supply highly quality organic products</p>
+                <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded mt-4">Shop
+                    Now</button>
+            </div>
+            <!-- End of Sticky content -->
+            <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                <a href="#slide4" class="btn btn-circle">❮</a>
+                <a href="#slide2" class="btn btn-circle">❯</a>
             </div>
         </div>
 
-        <!-- Small Device or sm: breakpoint - Dropdown Menu -->
-        <div class="sm:hidden relative">
-            <button type="button" class="text-white focus:outline-none" aria-label="Menu">
-                <svg class="h-6 w-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"
-                    xmlns="http://www.w3.org/2000/svg">
-                    <path strokeLinecap="round" strokeLinejoin="round" strokeWidth="2" d="M4 6h16M4 12h16m-7 6h7">
-                    </path>
-                </svg>
-            </button>
-            <!-- Dropdown Menu Content -->
-            <ul
-                class="origin-top-right absolute right-0 mt-2 w-40 rounded-md shadow-lg bg-white ring-1 ring-black ring-opacity-5 hidden">
-                <li><a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">Home</a></li>
-                <li><a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">About Us</a></li>
-                <li><a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">Shop</a></li>
-                <li><a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">All Files</a></li>
-            </ul>
+        <!-- Slide 2 -->
+        <div id="slide2" class="carousel-item relative w-full">
+            <img src="./images/banner2.png" class="w-full" />
+            <!-- Sticky content for Slide 2 -->
+            <div class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 text-center">
+                <h2 class="text-3xl font-bold">Exotic tastes at your doorstep</h2>
+                <p>We supply highly quality organic products</p>
+                <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded mt-4">Shop
+                    Now</button>
+            </div>
+            <!-- End of Sticky content -->
+            <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                <a href="#slide1" class="btn btn-circle">❮</a>
+                <a href="#slide3" class="btn btn-circle">❯</a>
+            </div>
         </div>
-    </nav>
+
+        <!-- Slide 3 -->
+        <div id="slide3" class="carousel-item relative w-full">
+            <img src="./images/banner3.png" class="w-full" />
+            <!-- Sticky content for Slide 3 -->
+            <div class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 text-center">
+                <h2 class="text-3xl font-bold">Exotic tastes at your doorstep</h2>
+                <p>We supply highly quality organic products</p>
+                <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded mt-4">Shop
+                    Now</button>
+            </div>
+            <!-- End of Sticky content -->
+            <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                <a href="#slide2" class="btn btn-circle">❮</a>
+                <a href="#slide4" class="btn btn-circle">❯</a>
+            </div>
+        </div>
+
+        <!-- Slide 4 -->
+        <div id="slide4" class="carousel-item relative w-full">
+            <img src="./images/banner4.png" class="w-full" />
+            <!-- Sticky content for Slide 4 -->
+            <div class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 text-center">
+                <h2 class="text-3xl font-bold">Exotic tastes at your doorstep</h2>
+                <p>We supply highly quality organic products</p>
+                <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded mt-4">Shop
+                    Now</button>
+            </div>
+            <!-- End of Sticky content -->
+            <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                <a href="#slide3" class="btn btn-circle">❮</a>
+                <a href="#slide1" class="btn btn-circle">❯</a>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
