--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 <body class="font-lato">
     <header>
-        <!-- navbar section -->
+        <!-- navbar section started-->
         <nav class="container mx-auto sm:bg-transparent md:bg-rose-500 lg:bg-rose-500 flex items-center justify-between px-4 py-2 sm:px-6 md:px-8 lg:px-12 rounded-full mt-4 md:mt-8 md:mb-8 lg:mt-8 lg:mb-8">
         <!-- menu --> 
             <div class="hidden md:flex items-center space-x-4">
@@ -94,47 +94,72 @@
                 <li><a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">All Files</a></li>
             </ul>
         </div>
-
         </nav>
-        <!-- banner section -->
-        <div class="carousel-container container mx-auto relative min-h-[Calc(100vh - 120px)]">
-            <div class="absolute z-10 inset-y-5 lg:inset-y-16 md:inset-y-24 inset-x-16 lg:inset-x-52 md:inset-x-32 text-center w-2/3 lg:w-2/3 space-y-2 lg:space-y-4 items-center">
-                <h1 class="text-2xl md:text-5xl lg:text-7xl text-white">Exotic tastes at your doorstep</h1>
-                <p class="text-sm lg:text-lg text-white">We supply highly quality organic products</p>
-                <button class="bg-rose-500 md:btn-error px-4 rounded-lg py-2 text-sm md:btn btn-error text-white">Shop Now</button>
+        <!-- navbar section ended-->
+        <!-- banner section started -->
+        <div class="relative">
+            <div class="carousel-container container mx-auto relative min-h-[Calc(100vh - 120px)]">
+                <div class="absolute z-10 inset-y-5 lg:inset-y-16 md:inset-y-24 inset-x-16 lg:inset-x-52 md:inset-x-32 text-center w-2/3 lg:w-2/3 space-y-2 lg:space-y-4 items-center">
+                    <h1 class="text-2xl md:text-5xl lg:text-7xl text-white">Exotic tastes at your doorstep</h1>
+                    <p class="text-sm lg:text-lg text-white">We supply highly quality organic products</p>
+                    <button class="bg-rose-500 md:btn-error px-4 rounded-lg py-2 text-sm md:btn btn-error text-white">Shop Now</button>
+                </div>
+        
+                <div class="carousel w-full">
+                    <div id="slide1" class="carousel-item relative w-full">
+                        <img src="./images/banner1.png" class="w-full" />
+                        <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                            <a href="#slide4" class="btn btn-circle">❮</a>
+                            <a href="#slide2" class="btn btn-circle">❯</a>
+                        </div>
+                    </div>
+                    <div id="slide2" class="carousel-item relative w-full">
+                        <img src="./images/banner2.png" class="w-full" />
+                        <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                            <a href="#slide1" class="btn btn-circle">❮</a>
+                            <a href="#slide3" class="btn btn-circle">❯</a>
+                        </div>
+                    </div>
+                    <div id="slide3" class="carousel-item relative w-full">
+                        <img src="./images/banner3.png" class="w-full" />
+                        <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                            <a href="#slide2" class="btn btn-circle">❮</a>
+                            <a href="#slide4" class="btn btn-circle">❯</a>
+                        </div>
+                    </div>
+                    <div id="slide4" class="carousel-item relative w-full">
+                        <img src="./images/banner4.png" class="w-full" />
+                        <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                            <a href="#slide3" class="btn btn-circle">❮</a>
+                            <a href="#slide1" class="btn btn-circle">❯</a>
+                        </div>
+                    </div>
+                </div>
             </div>
-    
-            <div class="carousel w-full">
-                <div id="slide1" class="carousel-item relative w-full">
-                    <img src="./images/banner1.png" class="w-full" />
-                    <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-                        <a href="#slide4" class="btn btn-circle">❮</a>
-                        <a href="#slide2" class="btn btn-circle">❯</a>
-                    </div>
+            <div class="lg:flex lg:justify-center lg:rounded-lg lg:w-4/5 lg:h-52 lg:mx-auto lg:absolute lg:items-center lg:bg-white lg:z-50 lg:top-96 lg:left-36 md:hidden hidden">
+                <div class="lg:flex lg:flex-col lg:items-center lg:py-12 lg:px-12">
+                    <img src="./images/fruit1.png" alt="">
+                    <p class="text-xl font-medium">Grapes</p>
                 </div>
-                <div id="slide2" class="carousel-item relative w-full">
-                    <img src="./images/banner2.png" class="w-full" />
-                    <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-                        <a href="#slide1" class="btn btn-circle">❮</a>
-                        <a href="#slide3" class="btn btn-circle">❯</a>
-                    </div>
+                <div class="lg:flex lg:flex-col lg:items-center lg:py-12 lg:px-12">
+                    <img src="./images/fruit2.png" alt="">
+                    <p class="text-xl font-medium">Orange</p>
                 </div>
-                <div id="slide3" class="carousel-item relative w-full">
-                    <img src="./images/banner3.png" class="w-full" />
-                    <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-                        <a href="#slide2" class="btn btn-circle">❮</a>
-                        <a href="#slide4" class="btn btn-circle">❯</a>
-                    </div>
+                <div class="lg:flex lg:flex-col lg:items-center lg:py-12 lg:px-12">
+                    <img src="./images/fruit3.png" alt="">
+                    <p class="text-xl font-medium">Mango</p>
                 </div>
-                <div id="slide4" class="carousel-item relative w-full">
-                    <img src="./images/banner4.png" class="w-full" />
-                    <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-                        <a href="#slide3" class="btn btn-circle">❮</a>
-                        <a href="#slide1" class="btn btn-circle">❯</a>
-                    </div>
+                <div class="lg:flex lg:flex-col lg:items-center lg:py-12 lg:px-12">
+                    <img src="./images/fruit4.png" alt="">
+                    <p class="text-xl font-medium">Strawberry</p>
+                </div>
+                <div class="lg:flex lg:flex-col lg:items-center lg:py-12 lg:px-12">
+                    <img src="./images/fruit5.png" alt="">
+                    <p class="text-xl font-medium">Pomegranate</p>
                 </div>
             </div>
         </div>
+        <!-- banner section ended -->
     </header>
 
     <main>
