draft for all section  decined

--- a/test.html
+++ b/test.html
@@ -133,7 +133,8 @@
         </div>
       </div> -->
 
-
+      grid grid-flow-col
+      auto-cols-max
 
       <!-- <div class="navbar bg-base-100">
         <div class="flex-1">
