--- a/index.html
+++ b/index.html
@@ -313,15 +313,30 @@
             <div class="hero-overlay bg-opacity-70"></div>
             <div class="hero-content text-center text-neutral-content">
                 <div class="max-w-lg lg:max-w-full">
-                    <h1 class="mb-5 text-2xl lg:text-5xl font-bold">Meet with Our Expert</h1>
-                    <p class="mb-5 lg:w-2/3 lg:mx-auto">We have most talented and experienced team to provide on demand services. You can
-                        connect them from any where of the world</p>
                     <div>
-                        <div class="text-center space-y-5 lg:grid lg:grid-cols-4 lg:justify-center lg:items-center gap-20">
+                        <h1 class="mb-5 text-2xl lg:text-5xl md:text-3xl font-bold">Meet with Our Expert</h1>
+                        <p class="mb-5 lg:w-2/3 lg:mx-auto">We have most talented and experienced team to provide on demand services. You can connect them from any where of the world</p>
+                    </div>
+                        <div
+                            class="text-center space-y-5 lg:grid lg:grid-cols-4 md:grid md:grid-cols-2 lg:justify-center md:justify-center md:items-center lg:items-center gap-20">
+                            <div class="flex flex-col items-center">
+                                <div class="space-y-3 lg:space-y-2 lg:mt-4 md:mt-3">
+                                    <img class="w-36" src="./images/member1.png" alt="">
+                                    <h1 class="lg:text-xl">Awlad Hossain</h1>
+                                    <p class="text-sm lg:text-base">Food Scientist</p>
+                                </div>
+                                <div class="space-x-3 lg:text-xl lg:mt-3 md:mt-2">
+                                    <a href=""><i class="fa-brands fa-facebook"></i></a>
+                                    <a href=""><i class="fa-brands fa-twitter"></i></a>
+                                    <a href=""><i class="fa-brands fa-linkedin"></i></a>
+                                </div>
+                            </div>
                             <div class="flex flex-col items-center space-y-3">
-                                <img class="w-36" src="./images/member1.png" alt="">
-                                <h1 class="lg:text-xl">Awlad Hossain</h1>
-                                <p class="text-sm lg:text-base">Food Scientist</p>
+                                <div class="space-y-3 lg:space-y-2">
+                                    <img class="w-36" src="./images/member2.png" alt="">
+                                    <h1 class="lg:text-xl">Safia Chowdhury</h1>
+                                    <p class="text-sm lg:text-base">Food Expert</p>
+                                </div>
                                 <div class="space-x-3 lg:text-xl">
                                     <a href=""><i class="fa-brands fa-facebook"></i></a>
                                     <a href=""><i class="fa-brands fa-twitter"></i></a>
@@ -329,39 +344,32 @@
                                 </div>
                             </div>
                             <div class="flex flex-col items-center space-y-3">
-                                <img class="w-36" src="./images/member2.png" alt="">
-                                <h1>Safia Chowdhury</h1>
-                                <p class="text-sm">Food Expert</p>
-                                <div class="space-x-3">
+                                <div class="space-y-3 lg:space-y-2">
+                                    <img class="w-36" src="./images/member3.png" alt="">
+                                    <h1 class="lg:text-xl">Rokib Hossain</h1>
+                                    <p class="text-sm lg:text-base">Food Chemist</p>
+                                </div>
+                                <div class="space-x-3 lg:text-xl">
                                     <a href=""><i class="fa-brands fa-facebook"></i></a>
                                     <a href=""><i class="fa-brands fa-twitter"></i></a>
                                     <a href=""><i class="fa-brands fa-linkedin"></i></a>
                                 </div>
                             </div>
                             <div class="flex flex-col items-center space-y-3">
-                                <img class="w-36" src="./images/member3.png" alt="">
-                                <h1>Rokib Hossain</h1>
-                                <p class="text-sm">Food Chemist</p>
-                                <div class="space-x-3">
+                                <div class="space-y-3 lg:space-y-2">
+                                    <img class="w-36" src="./images/member4.png" alt="">
+                                    <h1 class="lg:text-xl">Chaity</h1>
+                                    <p class="text-sm lg:text-base">Food Technologist</p>
+                                </div>
+                                <div class="space-x-3 lg:text-xl">
                                     <a href=""><i class="fa-brands fa-facebook"></i></a>
                                     <a href=""><i class="fa-brands fa-twitter"></i></a>
                                     <a href=""><i class="fa-brands fa-linkedin"></i></a>
                                 </div>
                             </div>
-                            <div class="flex flex-col items-center space-y-3">
-                                <img class="w-36" src="./images/member4.png" alt="">
-                                <h1>Chaity</h1>
-                                <p class="text-sm">Food Technologist</p>
-                                <div class="space-x-3">
-                                    <a href=""><i class="fa-brands fa-facebook"></i></a>
-                                    <a href=""><i class="fa-brands fa-twitter"></i></a>
-                                    <a href=""><i class="fa-brands fa-linkedin"></i></a>
-                                </div>
-                            </div>
-                           
+
 
                         </div>
-                    </div>
                 </div>
             </div>
         </div>
