Footer section is all done

--- a/index.html
+++ b/index.html
@@ -309,67 +309,69 @@
 
         <!-- meet the team section started -->
 
-        <div class="hero min-h-screen container mx-auto rounded-lg" style="background-image: url(./images/banner1.png);">
+        <div class="hero min-h-screen container mx-auto rounded-lg"
+            style="background-image: url(./images/banner1.png);">
             <div class="hero-overlay bg-opacity-70"></div>
             <div class="hero-content text-center text-neutral-content">
                 <div class="max-w-lg lg:max-w-full">
                     <div>
                         <h1 class="mb-5 text-2xl lg:text-5xl md:text-3xl font-bold">Meet with Our Expert</h1>
-                        <p class="mb-5 lg:w-2/3 lg:mx-auto">We have most talented and experienced team to provide on demand services. You can connect them from any where of the world</p>
+                        <p class="mb-5 lg:w-2/3 lg:mx-auto">We have most talented and experienced team to provide on
+                            demand services. You can connect them from any where of the world</p>
                     </div>
-                        <div
-                            class="text-center space-y-5 lg:grid lg:grid-cols-4 md:grid md:grid-cols-2 lg:justify-center md:justify-center md:items-center lg:items-center gap-20">
-                            <div class="flex flex-col items-center">
-                                <div class="space-y-3 lg:space-y-2 lg:mt-4 md:mt-3">
-                                    <img class="w-36" src="./images/member1.png" alt="">
-                                    <h1 class="lg:text-xl">Awlad Hossain</h1>
-                                    <p class="text-sm lg:text-base">Food Scientist</p>
-                                </div>
-                                <div class="space-x-3 lg:text-xl lg:mt-3 md:mt-2">
-                                    <a href=""><i class="fa-brands fa-facebook"></i></a>
-                                    <a href=""><i class="fa-brands fa-twitter"></i></a>
-                                    <a href=""><i class="fa-brands fa-linkedin"></i></a>
-                                </div>
+                    <div
+                        class="text-center space-y-5 lg:grid lg:grid-cols-4 md:grid md:grid-cols-2 lg:justify-center md:justify-center md:items-center lg:items-center gap-20">
+                        <div class="flex flex-col items-center">
+                            <div class="space-y-3 lg:space-y-2 lg:mt-4 md:mt-3">
+                                <img class="w-36" src="./images/member1.png" alt="">
+                                <h1 class="lg:text-xl">Awlad Hossain</h1>
+                                <p class="text-sm lg:text-base">Food Scientist</p>
                             </div>
-                            <div class="flex flex-col items-center space-y-3">
-                                <div class="space-y-3 lg:space-y-2">
-                                    <img class="w-36" src="./images/member2.png" alt="">
-                                    <h1 class="lg:text-xl">Safia Chowdhury</h1>
-                                    <p class="text-sm lg:text-base">Food Expert</p>
-                                </div>
-                                <div class="space-x-3 lg:text-xl">
-                                    <a href=""><i class="fa-brands fa-facebook"></i></a>
-                                    <a href=""><i class="fa-brands fa-twitter"></i></a>
-                                    <a href=""><i class="fa-brands fa-linkedin"></i></a>
-                                </div>
+                            <div class="space-x-3 lg:text-xl lg:mt-3 md:mt-2">
+                                <a href=""><i class="fa-brands fa-facebook"></i></a>
+                                <a href=""><i class="fa-brands fa-twitter"></i></a>
+                                <a href=""><i class="fa-brands fa-linkedin"></i></a>
                             </div>
-                            <div class="flex flex-col items-center space-y-3">
-                                <div class="space-y-3 lg:space-y-2">
-                                    <img class="w-36" src="./images/member3.png" alt="">
-                                    <h1 class="lg:text-xl">Rokib Hossain</h1>
-                                    <p class="text-sm lg:text-base">Food Chemist</p>
-                                </div>
-                                <div class="space-x-3 lg:text-xl">
-                                    <a href=""><i class="fa-brands fa-facebook"></i></a>
-                                    <a href=""><i class="fa-brands fa-twitter"></i></a>
-                                    <a href=""><i class="fa-brands fa-linkedin"></i></a>
-                                </div>
-                            </div>
-                            <div class="flex flex-col items-center space-y-3">
-                                <div class="space-y-3 lg:space-y-2">
-                                    <img class="w-36" src="./images/member4.png" alt="">
-                                    <h1 class="lg:text-xl">Chaity</h1>
-                                    <p class="text-sm lg:text-base">Food Technologist</p>
-                                </div>
-                                <div class="space-x-3 lg:text-xl">
-                                    <a href=""><i class="fa-brands fa-facebook"></i></a>
-                                    <a href=""><i class="fa-brands fa-twitter"></i></a>
-                                    <a href=""><i class="fa-brands fa-linkedin"></i></a>
-                                </div>
-                            </div>
-
-
                         </div>
+                        <div class="flex flex-col items-center space-y-3">
+                            <div class="space-y-3 lg:space-y-2">
+                                <img class="w-36" src="./images/member2.png" alt="">
+                                <h1 class="lg:text-xl">Safia Chowdhury</h1>
+                                <p class="text-sm lg:text-base">Food Expert</p>
+                            </div>
+                            <div class="space-x-3 lg:text-xl">
+                                <a href=""><i class="fa-brands fa-facebook"></i></a>
+                                <a href=""><i class="fa-brands fa-twitter"></i></a>
+                                <a href=""><i class="fa-brands fa-linkedin"></i></a>
+                            </div>
+                        </div>
+                        <div class="flex flex-col items-center space-y-3">
+                            <div class="space-y-3 lg:space-y-2">
+                                <img class="w-36" src="./images/member3.png" alt="">
+                                <h1 class="lg:text-xl">Rokib Hossain</h1>
+                                <p class="text-sm lg:text-base">Food Chemist</p>
+                            </div>
+                            <div class="space-x-3 lg:text-xl">
+                                <a href=""><i class="fa-brands fa-facebook"></i></a>
+                                <a href=""><i class="fa-brands fa-twitter"></i></a>
+                                <a href=""><i class="fa-brands fa-linkedin"></i></a>
+                            </div>
+                        </div>
+                        <div class="flex flex-col items-center space-y-3">
+                            <div class="space-y-3 lg:space-y-2">
+                                <img class="w-36" src="./images/member4.png" alt="">
+                                <h1 class="lg:text-xl">Chaity</h1>
+                                <p class="text-sm lg:text-base">Food Technologist</p>
+                            </div>
+                            <div class="space-x-3 lg:text-xl">
+                                <a href=""><i class="fa-brands fa-facebook"></i></a>
+                                <a href=""><i class="fa-brands fa-twitter"></i></a>
+                                <a href=""><i class="fa-brands fa-linkedin"></i></a>
+                            </div>
+                        </div>
+
+
+                    </div>
                 </div>
             </div>
         </div>
@@ -454,17 +456,19 @@
 
     </main>
 
-    <footer class="bg-black min-h-56">
+    <footer class="bg-black">
         <div class="md:text-white text-white font-bold text-2xl flex justify-center pt-8 pb-4">
             <img class="w-9 md:w-10 pr-1 md:pr-2 lg:pr-2" src="./images/logo.png" alt=".">
             <p>Fruit-Burst</p>
         </div>
-        <div class="grid grid-cols-4 text-center text-white">
-            <a href="">Home</a>
-            <a href="">About Us</a>
-            <a href="">Shop</a>
-            <a href="">All Files</a>
-            <div class="col-span-4 flex justify-center gap-12 mt-2 text-white">
+        <div class="lg:flex lg:justify-center lg:items-center lg:gap-8">
+            <div class="lg:flex lg:flex-row lg:gap-8 grid grid-cols-4 text-center text-white">
+                <a href="">Home</a>
+                <a href="">About Us</a>
+                <a href="">Shop</a>
+                <a href="">All Fruits</a>
+            </div>
+            <div class="lg:flex lg:flex-row lg:gap-8 flex flex-row gap-12 my-3 text-center justify-center text-white">
                 <a href="">Support</a>
                 <a href="">My Account</a>
             </div>
