--- a/index.html
+++ b/index.html
@@ -460,9 +460,10 @@
             <h1 class="lg:text-5xl text-3xl font-bold lg:font-extrabold text-center lg:mt-36 mt-12 lg:mb-6 mb-4">Why Choose Us</h1>
             <p class="text-center text-gray-700 lg:mb-6 mb-4">We believe in customer satisfaction. We have strong team who are always deicated to meet your needs</p>
             <!-- left content -->
+            <!-- class="lg:flex justify-center items-center" -->
+           <div class="lg:grid lg:grid-cols-3 justify-center items-center flex flex-col">
 
-           <div class="lg:flex justify-center items-center">
-            <div class="flex-1 lg:order-1 sm:order-2">
+            <div class="flex-1 lg:order-1 order-2">
                 <div class="lg:flex lg:justify-start lg:items-start lg:gap-4 flex flex-col lg:flex-row justify-center items-center px-8"> 
                     <div class="lg:pt-3 text-2xl text-slate-400">
                         <span><i class="fa-solid fa-people-group"></i></span>
@@ -504,12 +505,12 @@
             </div>
 
             <!-- center content(image) -->
-            <div class="px-2 py-2 flex-1 lg:order-2 sm:order-1">
+            <div class="px-4 py-2 flex-1 lg:order-2 order-1">
                 <img src="./images/whychoose1.png" alt="">
             </div>
 
             <!-- right content -->
-            <div class="flex-1 lg:order-3 sm:order-3">
+            <div class="flex-1 lg:order-3 order-3">
                 <div class="lg:flex lg:justify-start lg:items-start lg:gap-4 flex flex-col lg:flex-row justify-center items-center px-8"> 
                     
                     <div>
