Final Project done

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </style>
 
     <!-- custom color -->
-    <script>
+    <!-- <script>
         tailwind.config = {
             theme: {
                 extend: {
@@ -38,7 +38,7 @@
                 }
             }
         }
-    </script>
+    </script> -->
 
 </head>
 
@@ -169,7 +169,7 @@
         <!-- banner section ended -->
     </header>
 
-    <main>
+    <body>
         <!-- deal of the day section started -->
         <div class="container mx-auto">
             <div
@@ -231,7 +231,8 @@
             </div>
         </div>
 
-        <!-- deal of the day card section started -->
+     <!-- Please see the modal box content  above ending body tag -->
+
         <div class="container mx-auto">
             <div class="sm:flex-auto lg:flex md:grid md:grid-cols-2 lg:justify-between lg:items-center lg:gap-4">
                 <!-- card 1 -->
@@ -371,7 +372,7 @@
 
                     <!-- modal button -->
                     <div>
-                        <!-- modal button 2 -->
+                        <!-- modal button -->
                         <button class="btn bg-transparent text-red-500" onclick="my_banana.showModal()">Details</button>
 
                     </div>
@@ -562,8 +563,10 @@
            </div>
 
         </div>
+        <!-- Why choose us section ended -->
     </main>
 
+        <!-- Footer Part Starts Here -->
     <footer class="bg-black">
         <!-- footer logo -->
         <div class="md:text-white text-white font-bold text-2xl flex justify-center pt-8 pb-4">
@@ -593,11 +596,13 @@
             <a href=""><i class="fa-brands fa-apple"></i></a>
         </div>
     </footer>
+    <!-- Footer Part Ends Here -->
 
 
+ <!-- Please see the modal Details button on Deal of the day section  -->
 
-
-    <!-- modal button content from Deal of the day -->
+    <!-- Modal Button Content Starts Here -->
+   <!-- This section is linked with Deal of the day section's card button -->
 
     <!-- Banana Modal Box -->
     <dialog id="my_banana" class="modal modal-bottom sm:modal-middle">
@@ -733,6 +738,7 @@
             </div>
         </form>
     </dialog>
+    <!-- Modal Button Content Ended -->
 </body>
 
 </html>
